@startuml

title __PHASES's Class Diagram__\n

  namespace com.mad.mymoon {
    namespace ui.Phases {
      class com.mad.mymoon.ui.Phases.PhasesFragment {
          {static} ~ Date : Date
          ~ chosenDate : Button
          {static} ~ chosenDay : int
          {static} ~ chosenMonth : int
          {static} ~ chosenYear : int
          {static} ~ day : int
          {static} ~ ivMoon : ImageView
          {static} ~ month : int
          {static} ~ moonPhase : List<String>
          {static} ~ moonPhaseText : TextView
          {static} ~ newPercantage2 : double
          {static} ~ num : int
          {static} ~ test : String
          {static} ~ todaysDate : TextView
          {static} ~ todaysDate2 : TextView
          {static} ~ year : int
          {static} - context : Context
          {static} - currentPercentage : double
          {static} + Conway()
          {static} + calculateBasedOnAlgorithm()
          {static} + getAppContext()
          {static} + getDates()
          + onCreateView()
          + onResume()
          {static} + updatePercentageBasedOnDays()
          {static} - checkMoonPhase()
          {static} - updateImage()
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.Phases {
      class com.mad.mymoon.ui.Phases.PhasesViewModel {
          - mText : MutableLiveData<String>
          + PhasesViewModel()
          + getText()
      }
    }
  }
  

  com.mad.mymoon.ui.Phases.PhasesFragment -up-|> androidx.fragment.app.Fragment
  com.mad.mymoon.ui.Phases.PhasesFragment o-- com.mad.mymoon.ui.Phases.PhasesViewModel : phasesViewModel
  com.mad.mymoon.ui.Phases.PhasesViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
